# corgis

./: Cargo.toml  README.md
.cargo/: config.toml
assets/texture/: pong_spritesheet.ron  spritesheet.ron
config/: display.ron  input.ron
src/: audio.rs  brain.rs  bundle.rs  cogi.rs  corgi.rs  genes.rs  lib.rs  loader.rs  main.rs  neural_network.rs  pong.rs  state.rs  tile.rs  universe.rs
src/brain/: conversion.rs  mod.rs  neural_network.rs  perceive_body.rs  perceive_environment.rs  system.rs  think.rs
src/brain/perception/: body.rs  environment.rs  mod.rs
src/core/: bundle.rs
src/corgi/: mod.rs  movement.rs  reproduce.rs  spawner.rs
src/genes/: mod.rs
src/intelligence/: mod.rs  test.rs
src/systems/: bounce.rs  brain.rs  cogi_brain.rs  cogi_move.rs  cogi_spawner.rs  mod.rs  move_balls.rs  movement.rs  paddle.rs  reproduce.rs  spawner.rs  winner.rs
src/universe/: energy.rs  mod.rs  tile.rs
src/util/: consts.rs  mod.rs  types.rs
