[package]
name = "corgis"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
amethyst = { version = "0.15.3", features = ["tiles"] }

rand = "0.7.3"
rand_distr = "0.3.0"

proc-macro2 = "1.0.21"
syn = "1.0.41"
quote = "1.0.7"

log = "0.4.11"

#nphysics2d

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
#empty = ["amethyst/empty"]
#nightly = ["amethyst/nightly"]
