[package]
name = "corgis"
version = "0.0.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

[dependencies]
bevy = { version = "0.4.0", features = [ "dynamic" ] }
bevy_rapier2d = { version = "0.7.0", features = [ "simd-stable", "parallel" ] }

#rand = "0.7.3"
#rand_distr = "0.3.0"
#noise = "0.6.0"

#log = "0.4.11"
