[package]
name = "corgis"
version = "0.0.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

[dependencies]
bevy = { version = "0.4.0", features = [ "dynamic" ] }
bevy_rapier2d = { version = "0.7.0", features = [ "simd-stable", "parallel" ] }
rand = "0.8.0"
#radiate = "1.1.59"

#bevy_tilemap = "0.2.2"
#rand_distr = "0.4.0"
#noise = "0.6.0"
